cluster-setup/manifests/service-app.yml
apiVersion: v1
kind: Service
metadata:
  name: capstone
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/"
spec:
  selector:
     app: capstone
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
